@@ -4,7 +4,7 @@
 1.8.1 update 2 vs. 1.8.1 update 1
 
    1 Enhancement
-   1 Bugfix
+   2 Bugfixes
 ----------------------------------------------------------------------
 1.8.1 update 2
 
@@ -16,6 +16,9 @@
   
   - PL "Create new project" too large on OSX
   http://sourceforge.net/support/tracker.php?aid=1895406
+
+  - The content of external TMX level 2 tags is displayed
+  http://sourceforge.net/support/tracker.php?aid=1988491 
 
 ----------------------------------------------------------------------
  OmegaT 1.8.1 update 1 Changes
